--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -37,10 +37,15 @@ body {
 
 .container {
   max-width: 1170px;
-  padding-right: 40px;
-  padding-left: 40px;
+  padding-right: 20px;
+  padding-left: 20px;
   margin-left: auto;
   margin-right: auto;
+
+  @include md {
+    padding-right: 40px;
+    padding-left: 40px;
+  }
 }
 
 .main-wrapper {
